--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,104 @@
-/* No CSS *//*# sourceMappingURL=styles.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+body {
+  background-color: black;
+  margin: 0;
+  font-family: 'Poppins';
+}
+
+section {
+  padding: 12em 12em 8em 12em;
+  background-color: black;
+}
+
+h1 {
+  font-weight: bolder;
+  font-size: 4em;
+  color: white;
+}
+
+p {
+  font-weight: bold;
+  color: white;
+  font-size: 1.2em;
+}
+
+.hero {
+  text-align: left;
+}
+
+nav {
+  background: blue;
+  height: 60px;
+  width: 100%;
+}
+
+ul {
+  float: right;
+  margin-right: 20px;
+  display: block;
+}
+
+li {
+  display: inline-block;
+  line-height: 30px;
+  margin: 0 20px;
+}
+
+p a {
+  color: #e77853;
+  text-decoration: none;
+}
+
+p a:hover {
+  border-radius: 3px;
+  color: cyan;
+  shadow: 0 0 5px cyan, 0 0 5px cyan;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+  padding: 4px 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+nav ul li a:hover {
+  border-radius: 3px;
+  color: cyan;
+  -webkit-box-shadow: 0 0 5px #33ffff, 0 0 5px #66ffff;
+          box-shadow: 0 0 5px #33ffff, 0 0 5px #66ffff;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.logo {
+  font-size: 3em;
+  color: white;
+  font-weight: bold;
+  line-height: 80px;
+  padding-left: 60px;
+  color: cyan;
+  -webkit-box-shadow: cyan;
+          box-shadow: cyan;
+}
+
+@media all and (max-width: 960px) {
+  nav ul {
+    margin-right: 0px;
+    float: left;
+  }
+  nav .logo {
+    padding-left: 30px;
+    width: 100%;
+  }
+  nav ul li {
+    display: block;
+    width: 100%;
+  }
+}
+/*# sourceMappingURL=styles.css.map */
