--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ p {
 }
 
 nav {
-  background: blue;
+  background: #1b1b1b;
   height: 60px;
   width: 100%;
 }
@@ -57,7 +57,7 @@ p a:hover {
   transition: .5s;
 }
 
-nav ul li a {
+a {
   text-decoration: none;
   color: white;
   cursor: pointer;
@@ -67,7 +67,7 @@ nav ul li a {
   font-weight: bold;
 }
 
-nav ul li a:hover {
+a:hover {
   border-radius: 3px;
   color: cyan;
   -webkit-box-shadow: 0 0 5px #33ffff, 0 0 5px #66ffff;
@@ -80,25 +80,67 @@ nav ul li a:hover {
   font-size: 3em;
   color: white;
   font-weight: bold;
-  line-height: 80px;
+  line-height: 70px;
   padding-left: 60px;
   color: cyan;
   -webkit-box-shadow: cyan;
           box-shadow: cyan;
+  cursor: pointer;
 }
 
-@media all and (max-width: 960px) {
-  nav ul {
-    margin-right: 0px;
-    float: left;
+.checkbtn {
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 65px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+
+#check {
+  display: none;
+}
+
+@media (max-width: 952px) {
+  label.logo {
+    font-size: 30px;
+    padding-left: 50px;
   }
-  nav .logo {
-    padding-left: 30px;
+  nav ul li a {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 858px) {
+  .checkbtn {
+    display: block;
+  }
+  ul {
+    position: fixed;
     width: 100%;
+    height: 100vh;
+    background: black;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    -webkit-transition: all .5s;
+    transition: all .5s;
   }
   nav ul li {
     display: block;
-    width: 100%;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  nav ul li a {
+    font-size: 20px;
+  }
+  a:hover, a.active {
+    background: none;
+    color: #0082e6;
+  }
+  #check:checked ~ ul {
+    left: 0;
   }
 }
 /*# sourceMappingURL=styles.css.map */
