--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,9 +17,6 @@ section{
     padding: 12em 12em 8em 12em;
     background-color: black;
     
-
-
-    
 }
 h1{
     font-weight: bolder;
@@ -36,7 +33,7 @@ p{
 }
 
 nav{
-    background: blue;
+    background: #1b1b1b;
     height: 60px;
     width: 100%;
 
@@ -69,7 +66,7 @@ p a:hover{
     transition: .5s;
 }
 
-nav ul li a{
+a{
     text-decoration: none;
     color: white;
     cursor: pointer;
@@ -80,7 +77,7 @@ nav ul li a{
     text-transform: uppercase;
     font-weight: bold;
 }
-nav ul li a:hover{
+a:hover{
     border-radius: 3px;
     color: cyan;
     
@@ -92,44 +89,61 @@ nav ul li a:hover{
      font-size: 3em;
      color: white;
      font-weight: bold;
-     line-height: 80px;
+     line-height: 70px;
      padding-left:  60px;
      color: cyan;
      box-shadow: cyan;
+     cursor: pointer;
      
-     
- } 
-//  .show, input{
-//      display: none;
-//  }
-
-@media all and (max-width: 960px) {
-    nav ul{
-        margin-right: 0px;
-        float: left;
+} 
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 65px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+  }
+  #check{
+    display: none;
+  }
+  @media (max-width: 952px){
+    label.logo{
+      font-size: 30px;
+      padding-left: 50px;
     }
-    nav .logo{
-        padding-left: 30px;
-        width: 100%;
+    nav ul li a{
+      font-size: 16px;
+    }
+  }
+  @media (max-width: 858px){
+    .checkbtn{
+      display: block;
+    }
+    ul{
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      background: black;
+      top: 80px;
+      left: -100%;
+      text-align: center;
+      transition: all .5s;
     }
     nav ul li{
-        display: block;
-        width: 100%;
+      display: block;
+      margin: 50px 0;
+      line-height: 30px;
     }
-    
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    nav ul li a{
+      font-size: 20px;
+    }
+    a:hover,a.active{
+      background: none;
+      color: #0082e6;
+    }
+    #check:checked ~ ul{
+      left: 0;
+    }
+  }
