--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,19 +5,6 @@ body{
     margin: 0;
     font-family: 'Poppins';
 }
-
-// .Primarybar{
-//     background: rgb(163, 147, 147);
-//     padding: 1em;
-
-
-
-
-section{
-    padding: 12em 12em 8em 12em;
-    background-color: black;
-    
-}
 h1{
     font-weight: bolder;
     font-size: 4em;
@@ -30,6 +17,14 @@ p{
 }
 .hero{
     text-align: left;
+    background-image: url(../images/dinesh2.jpg);
+    background-repeat: no-repeat;
+    
+}
+.left-col{
+    padding: 12em 12em 8em 12em;
+    
+
 }
 
 nav{
@@ -87,15 +82,22 @@ a:hover{
 }
  .logo{
      font-size: 3em;
-     color: white;
+     color: cyan;
      font-weight: bold;
      line-height: 70px;
      padding-left:  60px;
-     color: cyan;
      box-shadow: cyan;
-     cursor: pointer;
      
 } 
+.logo:hover{
+    border-radius: 3px;
+    color: cyan;
+    
+    shadow: 0 0 5px #33ffff,
+                0 0 5px #66ffff; 
+    transition: .5s;
+    
+}
 .checkbtn{
     font-size: 30px;
     color: white;
