--- a/css/styles.scss
+++ b/css/styles.scss
@@ -19,8 +19,24 @@ p{
     text-align: left;
     background-image: url(../images/dinesh2.jpg);
     background-repeat: no-repeat;
+    background-position: 20cm;
     
 }
+.Work{
+    text-align: left;
+    background-image: url(../images/dinesh2.jpg);
+    background-repeat: no-repeat;
+    background-position: 20cm;
+
+}
+.Aboutme{
+    text-align: left;
+    background-image: url(../images/dinesh2.jpg);
+    background-repeat: no-repeat;
+    background-position: 20cm;
+
+}
+
 .left-col{
     padding: 12em 12em 8em 12em;
     
