--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ p {
 }
 
 .Aboutme {
+  padding: 3em 12em 15em 7em;
   text-align: left;
   background-image: url(../images/dinesh2.jpg);
   background-repeat: no-repeat;
@@ -40,6 +41,11 @@ p {
 
 .left-col {
   padding: 12em 12em 8em 12em;
+}
+
+.container1 {
+  padding-right: 15em;
+  padding-bottom: 12em;
 }
 
 nav {
